Closed Bug 401735 Opened 18 years ago Closed 18 years ago

"Permission denied to create wrapper" exceptions not logged when raised in event handler

Categories

(Core :: XPConnect, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9

People

(Reporter: skrulx, Assigned: mrbkap)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Attached file test page
This is likely a regression from bug 393627. STR: 1. Open attached test file in Firefox 2.0 and open the error console 2. Click "Call function", note that an error is logged ("Error: uncaught exception: Permission denied...") 3. Click "Dispatch event", note that en error is logged ("Error: [Exception... "'Permission denied...") 4. Open attched test file in a trunk build and open the error console 5. Click "Call function", note that an error is logged 6. Click "Dispatch event", note that an error IS NOT logged So the script is silently failing when it throws a permission denied exception. This is a bit more problematic for Songbird since we have a "songbird" web page object with lots of security settings and it is difficult to debug security related problems when the errors are not logged.
Attached patch Proposed fixSplinter Review
Oops, I missed one or two! I went back through and these really are the only non-nsresult-thrown error codes possible.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #287614 - Flags: superreview?
Attachment #287614 - Flags: review?
Attachment #287614 - Flags: superreview?(jst)
Attachment #287614 - Flags: superreview?
Attachment #287614 - Flags: review?(jst)
Attachment #287614 - Flags: review?
Attachment #287614 - Flags: superreview?(jst)
Attachment #287614 - Flags: superreview+
Attachment #287614 - Flags: review?(jst)
Attachment #287614 - Flags: review+
Flags: blocking1.9+
Priority: -- → P2
Comment on attachment 287614 [details] [diff] [review] Proposed fix Super-safe fix to ensure that we report thrown exceptions.
Attachment #287614 - Flags: approval1.9?
Comment on attachment 287614 [details] [diff] [review] Proposed fix Feel free to land this once the tree opens up for post-beta1 checkins.
Attachment #287614 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Fix finally checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
Blocks: 405769
Blocks: 415498
No longer blocks: 405769
Target Milestone: --- → mozilla1.9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: