Actually throw if the thrown thing was not an nsresult. bug 401735, r+sr+a=jst